--- a/index.html
+++ b/index.html
@@ -782,16 +782,16 @@
             <span></span>
         </div>
         <ul class="nav-menu">
-            <li><a href="#">ANA SAYFA</a></li>
-            <li><a href="#">FUTBOL</a></li>
-            <li><a href="#">BASKETBOL</a></li>
-            <li><a href="#">VOLEYBOL</a></li>
-            <li><a href="#">BOKS</a></li>
-            <li><a href="#">YÜZME</a></li>
-            <li><a href="#">ATLETİZM</a></li>
-            <li><a href="#">MASA TENİSİ</a></li>
-            <li><a href="#">HAKKIMIZDA</a></li>
-            <li><a href="#">İLETİŞİM</a></li>
+            <li><a href="index.html">ANA SAYFA</a></li>
+            <li><a href="futbol.html">FUTBOL</a></li>
+            <li><a href="basketbol.html">BASKETBOL</a></li>
+            <li><a href="voleybol.html">VOLEYBOL</a></li>
+            <li><a href="boks.html">BOKS</a></li>
+            <li><a href="yuzme.html">YÜZME</a></li>
+            <li><a href="atletizm.html">ATLETİZM</a></li>
+            <li><a href="masatenisi.html">MASA TENİSİ</a></li>
+            <li><a href="hakkimizda.html">HAKKIMIZDA</a></li>
+            <li><a href="iletisim.html">İLETİŞİM</a></li>
         </ul>
         <div class="auth-buttons">
             <button class="auth-btn">GİRİŞ YAP</button>
