--- a/index.html
+++ b/index.html
@@ -794,8 +794,8 @@
             <li><a href="iletisim.html">İLETİŞİM</a></li>
         </ul>
         <div class="auth-buttons">
-            <button class="auth-btn"><a href="giris.html">GİRİŞ YAP</a></button>
-            <button class="auth-btn"><a href="uyeol.html">ÜYE OL</a></button>
+            <button class="auth-btn">GİRİŞ YAP</button>
+            <button class="auth-btn">ÜYE OL</button>
         </div>
     </nav>
     
