--- a/futbol.html
+++ b/futbol.html
@@ -233,7 +233,7 @@
     
     <nav class="nav-bar">
         <ul class="nav-menu">
-            <li><a href="#">ANA SAYFA</a></li>
+            <li><a href="index.html">ANA SAYFA</a></li>
         </ul>
     </nav>
     <main class="main-content">
