--- a/voleybol.html
+++ b/voleybol.html
@@ -240,7 +240,7 @@
         <section class="featured-news">
             <h2 class="section-title">Fenerbahçe VOLEYBOL Takımı</h2>
             <div class="main-feature">
-                <img src="/api/placeholder/400/320" alt="Fenerbahçe Futbol" class="featured-image">
+                <img src="/api/placeholder/400/320" alt="Fenerbahçe Voleybol" class="featured-image">
                 <div class="feature-overlay">
                     <h3 class="feature-title">Takım Hakkında</h3>
                     <p class="feature-desc">Buraya Fenerbahçe Voleybol takımı ile ilgili bilgilerinizi ekleyebilirsiniz.</p>
