--- a/basketbol.html
+++ b/basketbol.html
@@ -238,7 +238,7 @@
     </nav>
     <main class="main-content">
         <section class="featured-news">
-            <h2 class="section-title">Fenerbahçe BasketbolTakımı</h2>
+            <h2 class="section-title">Fenerbahçe Futbol Takımı</h2>
             <div class="main-feature">
                 <img src="/api/placeholder/400/320" alt="Fenerbahçe Futbol" class="featured-image">
                 <div class="feature-overlay">
