--- a/basketbol.html
+++ b/basketbol.html
@@ -223,7 +223,7 @@
             <div class="logo">
                 <img src="/api/placeholder/70/70" alt="Fenerbahçe Logo" class="fb-logo">
             </div>
-            <h1 class="site-title">FENERBAHÇE BASKETBOL</h1>
+            <h1 class="site-title">FENERBAHÇE HABER SİTESİ</h1>
         </div>
         <div class="search-section">
             <input type="text" class="search-box" placeholder="Arama...">
@@ -238,12 +238,12 @@
     </nav>
     <main class="main-content">
         <section class="featured-news">
-            <h2 class="section-title">Fenerbahçe Futbol Takımı</h2>
+            <h2 class="section-title">Fenerbahçe Basketbol Takımı</h2>
             <div class="main-feature">
-                <img src="/api/placeholder/400/320" alt="Fenerbahçe Futbol" class="featured-image">
+                <img src="/api/placeholder/400/320" alt="Fenerbahçe Basketbol" class="featured-image">
                 <div class="feature-overlay">
                     <h3 class="feature-title">Takım Hakkında</h3>
-                    <p class="feature-desc">Buraya Fenerbahçe futbol takımı ile ilgili bilgilerinizi ekleyebilirsiniz.</p>
+                    <p class="feature-desc">Buraya Fenerbahçe basketbol takımı ile ilgili bilgilerinizi ekleyebilirsiniz.</p>
                 </div>
             </div>
         </section>
