--- a/basketbol.html
+++ b/basketbol.html
@@ -248,10 +248,10 @@
             </div>
         <div class="news-container">
                 <div class="news-image-box">
-                    <img src="GS.JPG" alt="Maça Doğru | Galatasaray - Rytas Vilnius" class="news-image">
+                    <img src="GS.JPG" alt="Maça Doğru | Fenerbahçe - Rytas Vilnius" class="news-image">
                 </div>
                 <div class="news-content">
-                    <h3 class="news-title">Maça Doğru | Galatasaray - Rytas Vilnius"</h3>
+                    <h3 class="news-title">Maça Doğru | Fenerbahçe - Rytas Vilnius"</h3>
                     <p class="news-date">17 Mart 2025</p>
                     <div class="news-text">
                         <p>Galatasaray Erkek Basketbol Takımımız, Basketbol Şampiyonlar Ligi Top 16 J Grubu 5. maç gününde Rytas Vilnius ile karşı karşıya gelecek. Basketbol Gelişim Merkezi’nde 18 Mart Salı günü oynanacak olan mücadele saat 20.00’de başlayacak. Maç TRT Spor’dan canlı olarak yayınlanacak.
@@ -263,22 +263,22 @@ Takımımız, grupta çıktığı dört maçın ikisinde galip geldi. Rakibine L
 Dört maçını ikisini kazanan Rytas ise son olarak Manisa Basketbol’a 98-75 mağlup oldu. RJ Cole 14.8 sayı ortalamasıyla rakibin en skorer ismi olarak dikkat çekiyor. 
 
                     </div>
-                    <p class="news-author">Galatasaray Spor Kulübü</p>
+                    <p class="news-author">Fenerbahçe Spor Kulübü</p>
                 </div>
             </div>
             <div class="news-container">
                 <div class="news-image-box">
                     <img src="GS.JPG" alt="16 Mart 2025 Pazar 03:35
 
-Beşiktaş Fibabanka 92-77 Galatasaray" class="news-image">
+Beşiktaş Fibabanka 92-77 Fenerbahçe" class="news-image">
                 </div>
                 <div class="news-content">
                     <h3 class="news-title">
 
-Beşiktaş Fibabanka 92-77 Galatasaray"</h3>
+Beşiktaş Fibabanka 92-77 Fenerbahçe"</h3>
                     <p class="news-date">17 Mart 2025</p>
                     <div class="news-text">
-                        <p>Galatasaray Erkek Basketbol Takımımız, Türkiye Sigorta Basketbol Süper Ligi’nin 21. haftasında Beşiktaş Fibabanka ile karşı karşıya geldi. BJK Fibabanka Spor Kompleksi’nde oynanan mücadeleyi ev sahibi takım 92-77 kazandı.
+                        <p>Fenerbahçe Erkek Basketbol Takımımız, Türkiye Sigorta Basketbol Süper Ligi’nin 21. haftasında Beşiktaş Fibabanka ile karşı karşıya geldi. BJK Fibabanka Spor Kompleksi’nde oynanan mücadeleyi ev sahibi takım 92-77 kazandı.
 
 Buğrahan Tuncer, Tyrone Wallece, James Palmer, Michael Young ve Angel Delgado beşiyle başladığımız mücadelede beş basketbolcumuz çift haneli sayı üretti. 
 
@@ -290,7 +290,7 @@ Wallace 20 sayı ve 6 ribauntluk performansıyla en skorer oyuncumuz olurken onu
 4.P: 24-14 
 
                     </div>
-                    <p class="news-author">Galatasaray Spor Kulübü</p>
+                    <p class="news-author">Fenerbahçe Spor Kulübü</p>
                 </div>
             </div>
             
