--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+ 
     <title>Fener Haber - Fenerbahçe'nin En Güncel Haberleri</title>
     <style>
         * {
@@ -905,5 +905,10 @@
                     <a href="#" class="social-icon">f</a>
                     <a href="#" class="social-icon">t</a>
                     <a href="#" class="social-icon">i</a>
-                   
-                 
+               <div>      
+           </div>
+        </div>
+    </footer>
+    <script src="script.js"></script>
+            </body>
+</html>
