--- a/index.html
+++ b/index.html
@@ -910,5 +910,7 @@
         </div>
     </footer>
     <script src="script.js"></script>
+                <script src="//code.tidio.co/d358c6fk8hbkme7lvetaypurm3ad4rxt.js" async></script>
             </body>
+                
 </html>
