--- a/index.html
+++ b/index.html
@@ -910,7 +910,9 @@
         </div>
     </footer>
     <script src="script.js"></script>
-                <script src="//code.tidio.co/d358c6fk8hbkme7lvetaypurm3ad4rxt.js" async></script>
+                <script>
+(function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="7R6aSSvLUz2z1lj-y8EBA";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+</script>
             </body>
                 
 </html>
